crates/swc_ecma_parser/tests/test262-error-references/fail/a8beb1480f385441.js.stderr
error: Invalid left-hand side in 'for...in' statement
 --> $DIR/tests/test262-parser/fail/a8beb1480f385441.js:1:1
  |
1 | func() = 4
  | ^^^^^^

